# GROs

./: CMakeLists.txt  README.md  ReadMe.md  gar_accuracy_analysis_imdb.yaml  gar_match_test_1.yaml  gor_match_dblp_6_12_4_120.timelog  gor_match_imdb_3456.yaml
example/: gcr_discover_movielen_10_2_supp_150_conf_0.4.yaml  gor_match_dblp_4_40.yaml
example/yaml/: discovered_gfd_analysis.yaml  duplicate_vertex.yaml  gar_accuracy_analysis_dblp_1980_all_graph_5_2_supp_1000_minimized_s2_e1001_d5_neg.yaml  gar_accuracy_analysis_dblp_1980_all_graph_5_2_supp_1000_minimized_s2_e1001_d5_pos.yaml  gar_accuracy_analysis_movie_lens_s1_e1_d0_specified_test_set.yaml  gar_analysis_dblp_1980_contain_all_small_cluster_s2_e1001_d5_multi_sample.yaml  gar_analysis_dblp_1980_each_cluster_s2_e1001_d5_multi_sample.yaml  gar_analysis_dblp_1980_rules_rhs.yaml  gar_exist.yaml  gar_imply_dbpedia_5_1_triple_larger_100000_supp_1000__dbpedia_dbpedia_confidence.yaml  gar_info_collection.yaml  gar_match.yaml  gar_match_multi_gar.yaml  gar_match_unbalance.yaml  gar_set_to_gar.yaml  gar_supp_dblp_1980_supp_1000.yaml  gcr_discover_movielen_avgratin_to_half_dis8_5_2_supp_1000.yaml  gor_accuracy_analysis_dblp_1980_all_graph_5_2_supp_1000_minimized_s2_e1001_d5_neg.yaml  gor_accuracy_analysis_dblp_1980_all_graph_5_2_supp_1000_minimized_s2_e1001_d5_pos.yaml  gor_match.yaml  gor_match_multi_gor.yaml  gor_match_unbalance.yaml  gor_match_workload_balance.yaml  graph_convert.yaml  graph_discrete_movielen_8.yaml  graph_sample.yaml  graph_statistic_collection.yaml  locality_dbpedia_e48_e49_e50_e51_e52.yaml  merge_graph_dbpedia_bfs_width_limit_r2_w1.yaml  pattern_exist.yaml  pattern_match.yaml  prob_gar_anytime_chase.yaml  rdf_to_graph.yaml  rule_match.yaml  select_edge_dbpedia_e50_e51_e52.yaml  three_tuple_to_csv.yaml
include/gar/: gar.h  gar_imply.h  gar_supp.h  literal_info.h  same_gar.h
include/gcr/: gcr_supp.h
include/gor/: csv_gor.h  gor.h  gor_match.h  oracle_literal.h
include/gundam/doc/prog_doc/: attribute.md
include/gundam/tool/: radius.h
include/libgrape-lite/grape/fragment/: basic_fragment_loader.h  immutable_edgecut_fragment.h
include/logic/: disjunctive_paradigm.h
include/prob_gar/: prob_gar_anytime_chase.h
include/util/: load_rule.h
shell/: run_analysis_gar_cover_by_feature.sh  run_cluster_to_support.sh  run_constant_rule_analysis.sh  run_discovered_gfd_analysis.sh  run_gar_accuracy_analysis.sh  run_gar_analysis.sh  run_gar_discover.sh  run_gar_discover.sh2  run_gar_exist.sh  run_gar_imply.sh  run_gar_match.sh  run_gar_overlap.sh  run_gar_supp.sh  run_gar_supp_merge.sh  run_gar_supp_not_merge.sh  run_gar_supp_single.sh  run_gfd_discover_single.sh  run_gor_accuracy_analysis.sh  run_gor_match.sh  run_graph_convert.sh  run_graph_sample.sh  run_merge_graph.sh  run_pattern_match.sh  run_prob_gar_chase.sh  run_rule_match.sh  run_select_edge.sh  run_supp_sample.sh  run_test.sh  run_three_tuple_to_csv.sh  run_tools.sh
src/apps/: duplicate_vertex.cc  gor_match.cc  gor_match.h  gor_match_bowen.cc  gor_match_bowen.h
src/apps/gor_match/: gor_match.h
src/apps/gor_match_bowen/: gor_match_bowen.h  gor_match_bowen_context.h
src/apps/test/: test.h
